
2008-04-23  Roland Clobus <rclobus@bigfoot.com>
	* configure.ac, README.subversion, common/network.c: Specify IPv4 or
	IPv6 for sockets.
	* server/turn.c, server/player.c, server/trade.c, server/server.h,
	server/pregame.c, client/common/client.c, client/common/callback.c,
	docs/server_states_trade.dot: Simplified the state machine for trade,
	this fixes a bug that could overflow the stack when a client did not
	acknowledge that the trade has ended.
	* configure.ac: Protocol to 0.12.1, due to the change in trade.
	* server/south_africa.game: New map, created by Petri Jooste
	<Petri.Jooste@nwu.ac.za>

2008-03-26  Roland Clobus <rclobus@bigfoot.com>
	* common/gtk/aboutbox.c: Add translator_credits.
	* String freeze for 0.11.4

2008-03-24  Roland Clobus <rclobus@bigfoot.com>
	* server/player.c, server/server.h: Tournament timer improvements:
	Only start the timer on players, not viewers, reset the time when the
	last player left.

2008-03-23  Roland Clobus <rclobus@bigfoot.com>
	* configure.ac, autogen.sh: After running autoupdate, the minimum
	version for autoconf is 2.61, and intltool 0.35.
	* configure.ac, po/LINGUAS: Upgrade intltool to 0.35.
	* client/callback.h, client/gtk/offline.c, client/common/main.c,
	client/common/Makefile.am: Removed commandline argument to override
	the language.
	* client/common/i18n.c: No longer in use.
	* common/state.c: Removed compiler warning.
	* client/gtk/interface.c, client/gtk/player.c, client/gtk/audio.c,
	client/gtk/audio.h, client/gtk/chat.c, client/gtk/gui.c,
	client/gtk/Makefile.am, client/gtk/gui.h: Added silent mode, as
	requested by Mike Pater (SF #1655951)
	* common/gtk/metaserver.c, common/gtk/metaserver.h,
	common/gtk/Makefile.am, server/gtk/main.c, client/gtk/connect.c:
	Easier selection for meta servers (by using a combo box)
	* docs/pioneers-meta-server.6, meta-server/main.c: When -p is not
	specified, the meta server will not be able to create games.